[feature #164926474] adds sliding images

--- a/UI/index.html
+++ b/UI/index.html
@@ -23,8 +23,10 @@
             </ul>
        </div>
         <div class="navbar2">
-            <i class="fas fa-university"></i>
-            <span>Banka</span>  
+            <span class="banka">
+                <i class="fas fa-university"></i>
+                <span>Banka</span> 
+            </span> 
         </div>
     </nav>
     <!-- Side navigation bar -->
@@ -37,9 +39,40 @@
 
     </div>
     <!-- main area -->
-    <section id="main-area" class="layer">
-        <div >
-            <h1>Hello there</h1>
+    <section id="main-area">
+        <div class="main-area-images slider">
+            <figure>
+                <div class="slides">
+                    <h1>welcome to BANKA</h1>
+                    <img src="./ASSETS/pexels-photo-1068523.jpeg" alt="image1">
+                </div>
+                <div class="slides">
+                        <p>Banka is a light-weight core banking application that powers banking operations like account
+                        creation, customer deposit and withdrawals.
+                        </p>
+                    <img src="./ASSETS/pexels-photo-1449052.jpeg" alt="image1">
+                </div>
+                <div class="slides">
+                    <p>This app is meant to support a single bank, where
+                        users can signup and create bank accounts online, but must visit the branch to withdraw or
+                        deposit money..
+                    </p>
+                    <img src="./ASSETS/pexels-photo-1661004.jpeg" alt="image1">
+                </div>
+                <div class="slides">
+                    <img src="./ASSETS/pexels-photo-886465.jpeg" alt="image1">
+                </div>
+                <div class="slides">
+                        <p>GIVEN [the user has filled with necessary primary info]
+                            WHEN [all entered credentials are authentic]
+                            THEN [the user will have an online account in BANKA]
+                        </p>
+                    <img src="./ASSETS/pexels-photo.jpg" alt="image1">
+                </div>
+            </figure>    
+        </div>
+        <div class="main-area-images non-slider">
+
         </div>
     </section>
 
