[feature #164959042] creates sign up

--- a/UI/index.html
+++ b/UI/index.html
@@ -91,7 +91,29 @@
                 
             </div>
             <div class="non-sliderTwo">
-
+                <div class="signUp" id="userSignUp">
+                    <h2>Sign Up form</h2>
+                    <form action="">
+                        <div class="signUpInput">
+                            <input type="text" name="" required="">
+                            <label for="">First name</label>
+                        </div>
+                        <div class="signUpInput">
+                            <input type="text" name="" required="">
+                            <label for="">Last name</label>
+                        </div>
+                        <div class="signUpInput">
+                            <input type="email" name="" required="">
+                            <label for="email">Email</label>
+                        </div>
+                        <div class="signUpInput">
+                            <input type="password" name="" required="">
+                            <label for="password">Password</label>
+                        </div>
+                        <input type="submit" value="Sign Up">
+                    </form>
+                    <a href="#" class="closeSignUp-icon" id="closeSignUp" onclick="closeSignUpFunction()">&times;</a>
+                </div>
             </div>
         </div>
     </section>
