[feature #164959042] modifies <p> tag styles in the sliding images

--- a/UI/index.html
+++ b/UI/index.html
@@ -19,7 +19,7 @@
                 <li><a href="#">Home</a></li>
                 <li><a href="#" onclick="signupFunction()">sign up</a></li>
                 <li><a href="#" onclick="signinFunction()">sign in</a></li>
-                <li><a href="#" onclick="contactUsFunction()">contact us</a></li>
+                <!-- <li><a href="#" onclick="contactUsFunction()">contact us</a></li> -->
             </ul>
        </div>
         <div class="navbar2">
@@ -35,7 +35,7 @@
         <a href="#">Home</a>
         <a href="#" onclick="signupFunction()">sign up</a>
         <a href="#" onclick="signinFunction()">sign in</a>
-        <a href="#" onclick="contactUsFunction()">contact us</a>
+        <!-- <a href="#" onclick="contactUsFunction()">contact us</a> -->
 
     </div>
     <!-- main area -->
@@ -52,20 +52,18 @@
                         </p>
                     <img src="./ASSETS/pexels-photo-1449052.jpeg" alt="image1">
                 </div>
-                <div class="slides">
+                <div class="slides longParagraph">
                     <p>This app is meant to support a single bank, where
-                        users can signup and create bank accounts online, but must visit the branch to withdraw or
-                        deposit money..
-                    </p>
+                        users can signup and create bank accounts online,
+                        but must visit the branch to withdraw or deposit money..</p>
                     <img src="./ASSETS/pexels-photo-1661004.jpeg" alt="image1">
                 </div>
                 <div class="slides">
+                    <p>Get started by signUp for new Client</p>
                     <img src="./ASSETS/pexels-photo-886465.jpeg" alt="image1">
                 </div>
                 <div class="slides">
-                        <p>GIVEN [the user has filled with necessary primary info]
-                            WHEN [all entered credentials are authentic]
-                            THEN [the user will have an online account in BANKA]
+                        <p>Login and enjoy all Banka services.
                         </p>
                     <img src="./ASSETS/pexels-photo.jpg" alt="image1">
                 </div>
