[feature #164959042] create create account field

--- a/UI/index.html
+++ b/UI/index.html
@@ -16,7 +16,7 @@
                 <i class="fas fa-bars" onclick="showHiddenMenu()" id="barsmenu"></i>
             </span>
             <ul class="navbar-nav">
-                <li><a href="#">Home</a></li>
+                <li><a href="index.html">Home</a></li>
                 <li><a href="#" onclick="signupFunction()">sign up</a></li>
                 <li><a href="#" onclick="loginFunction()">Login</a></li>
                 <!-- <li><a href="#" onclick="contactUsFunction()">contact us</a></li> -->
@@ -32,7 +32,7 @@
     <!-- Side navigation bar -->
     <div id="hidden-nav-bar" class="side-nav-bar">
         <a href="#" class="close-icon" onclick="closeHiddenMenu()">&times;</a>
-        <a href="#">Home</a>
+        <a href="index.html">Home</a>
         <a href="#" onclick="signupFunction()">sign up</a>
         <a href="#" onclick="loginFunction()">Login</a>
         <!-- <a href="#" onclick="contactUsFunction()">contact us</a> -->
@@ -92,7 +92,7 @@
                 <!-- SIGN UP -->
                 <div class="signUp" id="userSignUp">
                     <h2>Sign Up form</h2>
-                    <form action="">
+                    <form action="./HTML/signup.html">
                         <div class="signUpInput">
                             <input type="text" name="" required="">
                             <label for="">First name</label>
