[feature #164959088] creates after login user dashboard

--- a/UI/index.html
+++ b/UI/index.html
@@ -117,7 +117,7 @@
                 <!-- LOGIN -->
                 <div class="login" id="userLogin">
                         <h2>Login form</h2>
-                        <form action="">
+                        <form action="./HTML/login.html">
                             <div class="loginInput">
                                 <input type="email" name="" required="">
                                 <label for="email">Email</label>
