[bug #165092101] fixing some misarrangement in the UI

--- a/UI/HTML/staff.html
+++ b/UI/HTML/staff.html
@@ -222,7 +222,18 @@
                </table>
                <a href="#" class="closecreateAccount-icon" id="closeSpecificAccount" onclick="closeSpecificAccount()">&times;</a>
            </div>
-            
+            <!-- WELCOME NOTE DIV -->
+            <div class="signupDashboard" id="signupDashboard">
+                <h2>Welcome to Banka!</h2>
+                <h3>Get access and enjoy our online banking services</h3>
+                <span>
+                        Banka is a light-weight core banking application that powers banking operations like account
+                        creation, customer deposit and withdrawals. This app is meant to support a single bank, where
+                        users can signup and create bank accounts online, but must visit the branch to withdraw or
+                        deposit money..
+                </span>
+                
+            </div>
 
         </div>
     </section>
