--- a/UI/HTML/signup.html
+++ b/UI/HTML/signup.html
@@ -50,7 +50,6 @@
             </div>
         </div>
         <div class="main-area-right" id="main-area-rightId">
-            <!-- <h1>Welcome Banka!</h1> -->
             <!-- CREATE ACCOUNT -->
             <div class="createAccount" id="usercreateAccount">
                 <h2>Create Account</h2>
@@ -116,7 +115,18 @@
                 </table>
                 <a href="#" class="closecreateAccount-icon" id="closeTransactions" onclick="closeTransactions()">&times;</a>
            </div>
-            
+           <!-- WELCOME NOTE DIV -->
+            <div class="signupDashboard" id="signupDashboard">
+                <h2>Welcome to Banka!</h2>
+                <h3>Get access and enjoy our online banking services</h3>
+                <span>
+                        Banka is a light-weight core banking application that powers banking operations like account
+                        creation, customer deposit and withdrawals. This app is meant to support a single bank, where
+                        users can signup and create bank accounts online, but must visit the branch to withdraw or
+                        deposit money..
+                </span>
+                
+            </div>
 
         </div>
     </section>
